Bug 61733 - sse4.1, sse4.2 not detected
Summary: sse4.1, sse4.2 not detected
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-03 11:57 UTC by JS
Modified: 2013-03-03 12:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description JS 2013-03-03 11:57:25 UTC
My CPU supports sse4.1 and sse4.2, but driver from git doesn't detect it

CPU: x86-64, sse2, sse3, ssse3
Comment 1 Chris Wilson 2013-03-03 12:15:48 UTC
commit 995abb46754eba7524afcb852159a31ea19add82
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Mar 3 12:12:56 2013 +0000

    sna: CPUID return ISA features in ecx/edx
    
    Whereas we were wrongly looking in eax.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=61733


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.