sna: CPUID return ISA features in ecx/edx

Whereas we were wrongly looking in eax.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=61733
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>